# RFkit

./: .gitignore  Cargo.toml  LICENSE  README.md
gui/: README.md  build-macos.sh
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: main.rs
gui/ui/: app.js  index.html  styles.css
src/: RF.py  RFcommonfn.py  RFlib.py  RFread.py  acq_time.rs  common.rs  get_auc.rs  main.rs
src/get_auc/: parse.rs
