[package]
name = "rfkit-gui"
version = "0.1.0"
description = "cross-platform graphical interface for RFkit"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
toml = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
